# fm-job-worker

./: .env.example  .gitignore  Dockerfile  Dockerfile.beat  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml  generate-docs.yml  test.yml
src/job_worker/: __init__.py  celery_app.py
src/job_worker/tasks/: __init__.py  case_tasks.py  knowledge_tasks.py
tests/unit/: test_worker.py
