[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-job-worker"
version = "0.1.0"
description = "FaultMaven Job Worker - Celery-based async task processing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "tenacity>=8.3.0",
    "python-dotenv>=1.0.0",
    # FaultMaven Core Library
    "fm-core-lib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.urls]
Homepage = "https://github.com/FaultMaven/fm-job-worker"
Repository = "https://github.com/FaultMaven/fm-job-worker"
Issues = "https://github.com/FaultMaven/fm-job-worker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
