[tool.poetry]
name = "fm-job-worker"
version = "0.1.0"
description = "FaultMaven Job Worker - Celery-based async task processing"
authors = ["FaultMaven Team"]
readme = "README.md"
packages = [{include = "job_worker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
tenacity = "^8.3.0"
python-dotenv = "^1.0.0"

# FaultMaven Core Library
fm-core-lib = {path = "fm-core-lib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
